[package]
name = "kollider-hedge-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
futures = "0.3.19"
kollider-client = { git = "https://github.com/standardsats/kollider-client", rev = "8d73db9a1185cce291316b2a0915d3dbdbb4ec37", features = [ "ws", "openapi" ] }
log = "0.4.14"
reqwest = { version = "0.11", features = [ "json" ] }
rweb = { version = "0.15.0", features = ["openapi", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }