[package]
name = "kollider-hedge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
futures = "0.3.19"
futures-channel = "0.3"
kollider-client = { git = "https://github.com/standardsats/kollider-client", rev = "30dfdc1703d5b2ca81dec1a1ad1fc719c5f115ab" }
log = "0.4.14"
rweb = { version = "0.6", features = ["openapi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "json", "chrono" ] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
sqlx-database-tester = { version = "0.2.0", features = [ "runtime-tokio" ] }