[package]
name = "kollider-hedge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
futures = "0.3.19"
futures-channel = "0.3"
futures-util = "0.3.19"
kollider-client = { git = "https://github.com/standardsats/kollider-client", rev = "8d73db9a1185cce291316b2a0915d3dbdbb4ec37", features = [ "openapi", "ws" ] }
log = "0.4.14"
rweb = { version = "0.15.0", features = ["openapi", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "json", "chrono" ] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
kollider-hedge-domain = { path = "../kollider-hedge-domain" }

[dev-dependencies]
maplit = "1.0.2"
sqlx-database-tester = { version = "0.2.0", features = [ "runtime-tokio" ] }
kollider-hedge-client = { path = "../kollider-hedge-client" }